--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -1,3 +1,4 @@
+
 *{
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -8,6 +9,8 @@ canvas{
     height: 200%;
 }
 .flexContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 100%;
   height: 100%;
@@ -15,8 +18,13 @@ canvas{
 }
 .description{
   position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin-top: 2.3em;
   height: 35em;
   width: 75%;
@@ -39,7 +47,8 @@ canvas{
   0.05em 0 0 rgba(255,0,0,0.75),
   -0.025em -0.05em 0 rgba(0,255,0,0.75),
   0.025em 0.05em 0 rgba(0,0,255,0.75);
-  animation: glitch 600ms infinite;
+  -webkit-animation: glitch 600ms infinite;
+          animation: glitch 600ms infinite;
   line-height: 6rem;
   margin-bottom: 0.4em;
 }
@@ -56,15 +65,23 @@ canvas{
 }
 
 .glitch span:first-child{
-  animation: glitch 650ms infinite;
-  clip-path: polygon(0 0, 100% 0, 100% 45%, 0 45%);
-  transform: translate(-0.05em, -0.0125em);
+  -webkit-animation: glitch 650ms infinite;
+          animation: glitch 650ms infinite;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 45%, 0 45%);
+          clip-path: polygon(0 0, 100% 0, 100% 45%, 0 45%);
+  -webkit-transform: translate(-0.05em, -0.0125em);
+      -ms-transform: translate(-0.05em, -0.0125em);
+          transform: translate(-0.05em, -0.0125em);
   opacity: .8;
 }
 .glitch span:last-child{
-  animation: glitch 800ms infinite;
-  clip-path: polygon(0 80%, 100% 40%, 100% 100%, 0 100%);
-  transform: translate(0.025em, 0.025em);
+  -webkit-animation: glitch 800ms infinite;
+          animation: glitch 800ms infinite;
+  -webkit-clip-path: polygon(0 80%, 100% 40%, 100% 100%, 0 100%);
+          clip-path: polygon(0 80%, 100% 40%, 100% 100%, 0 100%);
+  -webkit-transform: translate(0.025em, 0.025em);
+      -ms-transform: translate(0.025em, 0.025em);
+          transform: translate(0.025em, 0.025em);
   opacity: .8;
 }
 
@@ -75,7 +92,9 @@ canvas{
   height: 2em;
   bottom: 5px;
   margin-left: 45%;
-  transform: translateY(-80px) translateX(-50%) rotate(45deg);
+  -webkit-transform: translateY(-80px) translateX(-50%) rotate(45deg);
+      -ms-transform: translateY(-80px) translateX(-50%) rotate(45deg);
+          transform: translateY(-80px) translateX(-50%) rotate(45deg);
 }
 
 .scrollDown span{
@@ -87,22 +106,50 @@ canvas{
   height: 100%;
   border-bottom: 2px solid #fff;
   border-right: 2px solid #fff;
-  animation: animate 1.5s linear infinite
+  -webkit-animation: animate 1.5s linear infinite;
+          animation: animate 1.5s linear infinite
 }
 
 .scrollDown span:nth-child(1){
-  transform: translate(-15px, -15px);
-  animation-delay: -0.4s;
+  -webkit-transform: translate(-15px, -15px);
+      -ms-transform: translate(-15px, -15px);
+          transform: translate(-15px, -15px);
+  -webkit-animation-delay: -0.4s;
+          animation-delay: -0.4s;
 }
 
 .scrollDown span:nth-child(2){
-  transform: translate(0, 0);
-  animation-delay: -0.2s;
+  -webkit-transform: translate(0, 0);
+      -ms-transform: translate(0, 0);
+          transform: translate(0, 0);
+  -webkit-animation-delay: -0.2s;
+          animation-delay: -0.2s;
 }
 
 .scrollDown span:nth-child(3){
-  transform: translate(15px, 15px);
-  animation-delay: 0s;
+  -webkit-transform: translate(15px, 15px);
+      -ms-transform: translate(15px, 15px);
+          transform: translate(15px, 15px);
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+}
+
+@-webkit-keyframes animate{
+  0%{
+    top:-5px;
+    left:-5px;
+    opacity: 0;
+  }
+  25%{
+    top:0px;
+    left:0px;
+    opacity: 1;
+  }
+  50%,100%{
+    top:5px;
+    left:5px;
+    opacity: 0;
+  }
 }
 
 @keyframes animate{
@@ -122,6 +169,52 @@ canvas{
     opacity: 0;
   }
 }
+
+@-webkit-keyframes glitch{
+  0%{
+    text-shadow: 
+    0.05em 0 0 rgba(255,0,0,0.75),
+    -0.025em -0.05em 0 rgba(0,255,0,0.75),
+    0.025em 0.05em 0 rgba(0,0,255,0.75);
+  }
+  14%{
+    text-shadow: 
+    0.05em 0 0 rgba(255,0,0,0.75),
+    -0.025em -0.05em 0 rgba(0,255,0,0.75),
+    0.025em 0.05em 0 rgba(0,0,255,0.75);
+  }
+  15%{
+    text-shadow: 
+    -0.05em -0.025em 0 rgba(255,0,0,0.75),
+    0.025em 0.025em 0 rgba(0,255,0,0.75),
+    -0.05em -0.05em 0 rgba(0,0,255,0.75);
+  }
+  49%{
+    text-shadow: 
+    -0.05em -0.025em 0 rgba(255,0,0,0.75),
+    0.025em 0.025em 0 rgba(0,255,0,0.75),
+    -0.05em -0.05em 0 rgba(0,0,255,0.75);
+  }
+  50%{
+    text-shadow: 
+    0.025em 0.05em 0 rgba(255,0,0,0.75),
+    0.025em 0 0 rgba(0,255,0,0.75),
+    0 -0.05em 0 rgba(0,0,255,0.75);
+  }
+  99%{
+    text-shadow: 
+    0.025em 0.05em 0 rgba(255,0,0,0.75),
+    0.025em 0 0 rgba(0,255,0,0.75),
+    0 -0.05em 0 rgba(0,0,255,0.75);
+  }
+  100%{
+    text-shadow: 
+    -0.025em 0 0 rgba(255,0,0,0.75),
+    -0.025em -0.025em 0 rgba(0,255,0,0.75),
+    -0.025em -0.05em 0 rgba(0,0,255,0.75);
+  }
+  
+  }
 
 @keyframes glitch{
   0%{
@@ -173,13 +266,19 @@ canvas{
     *,
     ::before,
     ::after{
-      animation-delay: -1ms !important;
-      animation-duration: 1ms !important;
-      animation-iteration-count: 1 !important;
+      -webkit-animation-delay: -1ms !important;
+              animation-delay: -1ms !important;
+      -webkit-animation-duration: 1ms !important;
+              animation-duration: 1ms !important;
+      -webkit-animation-iteration-count: 1 !important;
+              animation-iteration-count: 1 !important;
       background-attachment: initial !important;
       scroll-behavior: auto !important;
-      transition-duration: 0s !important;
-      transition-delay: 0s !important;
+      -webkit-transition-duration: 0s !important;
+           -o-transition-duration: 0s !important;
+              transition-duration: 0s !important;
+      -webkit-transition-delay: 0s !important;
+           -o-transition-delay: 0s !important;
+              transition-delay: 0s !important;
     }
   }
-
