--- a/src/components/skills/skillsLight.module.css
+++ b/src/components/skills/skillsLight.module.css
@@ -1,3 +1,8 @@
+.canvas{
+  background-color: rgb(246, 246, 246);
+  height: 200%;
+}
+
 .flexContainer{
   display: -webkit-box;
   display: -ms-flexbox;
@@ -16,14 +21,15 @@
       -ms-flex-direction: row;
           flex-direction: row;
   position: absolute;
+  width: 90%;
 }
 
 
 .title{
-  color: rgb(251, 251, 251);
+  color: rgba(19, 19, 19);
   margin-left: 5em;
-  margin-top: 8em;
   width: 30em;
+  margin-top: 8em;
 }
 .title p{
   opacity: 1;
@@ -68,7 +74,7 @@
 }
 
 .description p{
-  color: white;
+  color: rgba(19, 19, 19, 0.721);
   font-size: 1.3em;
 }
 
@@ -82,7 +88,7 @@
 }
 
 .description h1{
-  color: azure;
+  color: rgba(19, 19, 19, 0.721);
   font-size: 1.4em;
   margin-top: 1.5em;
 }
@@ -95,6 +101,56 @@
   margin-top: 15em;
 }
 
+.progress{
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: rgba(19, 19, 19, 0.721);
+  margin-top: 15em;
+  margin-left: 10em;
+  width: 40%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-line-pack: center;
+      align-content: center;
+}
+
+.progress p{
+  font-size: 1.4em;
+}
+
+.progressBar{
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: rgb(37, 37, 37);
+  border: 1px solid rgb(68, 68, 68);
+  border-radius: .5em;
+  width: 100%;
+  height: 1em;
+}
+
+.progressFront{
+  border-radius: .5em;
+  height: 100%;
+  background-color: rgb(156, 0, 99);
+  width: 90%;
+}
+.progressBack{
+  border-radius: .5em;
+  height: 100%;
+  background-color: rgb(156, 0, 99);
+  width:83%;
+}
+
+.progressReact{
+  border-radius: .5em;
+  height: 100%;
+  background-color: rgb(156, 0, 99);
+  width: 85%;
+}
 .scrollDown{
   position: absolute;
   width: 2em;
@@ -113,8 +169,8 @@
   display: block;
   width: 100%;
   height: 100%;
-  border-bottom: 2px solid #fff;
-  border-right: 2px solid #fff;
+  border-bottom: 2px solid rgba(19, 19, 19);
+  border-right: 2px solid rgba(19, 19, 19);
   -webkit-animation: animate 1.5s linear infinite;
           animation: animate 1.5s linear infinite
 }
