--- a/src/App.module.css
+++ b/src/App.module.css
@@ -37,3 +37,11 @@
     height: 12px;
     background-color: #313131;
   }
+
+
+  @media (max-width: 768px) {
+    .flexColumn{
+      width: 100%;
+      margin-left: 0%;
+    }
+}
