--- a/src/components/home/homeDark.module.css
+++ b/src/components/home/homeDark.module.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-canvas{
+.canvas{
     background-color: #000;
     height: 200%;
 }
@@ -282,3 +282,27 @@ canvas{
               transition-delay: 0s !important;
     }
   }
+
+  @media (max-width: 768px) {
+    .flexContainer{
+      justify-content: center;
+
+    }
+    .description{
+      width: 100%;
+    }
+
+    .description h3{
+      line-height: 2rem;
+    }
+
+    .glitch{
+      font-size: 5em;
+    }
+    .canvas{
+      height: 100%;
+    }
+    .scrollDown{
+      margin-left: 10%;
+    }
+}
