--- a/src/components/aboutMe/aboutMeLight.module.css
+++ b/src/components/aboutMe/aboutMeLight.module.css
@@ -177,3 +177,42 @@
     opacity: 0;
   }
 }
+
+@media (max-width: 768px) {
+  .canvas{
+    height:100%;
+  }
+  .flexContainer2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    
+  }
+
+  .description{
+    margin-left: 0;
+    font-size: 1em;
+    width: 90%;
+    align-self: center;
+    justify-self: center;
+    text-align: center;
+
+  }
+
+  .glitch{
+    font-size: 4em;
+    width: fit-content;
+  }
+
+  .title{
+    margin-left: 1em;
+    width: 100%;
+  }
+
+  .scrollDown{
+    margin-left: 50%;
+  }
+
+
+}
