--- a/src/components/aboutMe/aboutMeLight.module.css
+++ b/src/components/aboutMe/aboutMeLight.module.css
@@ -201,13 +201,14 @@
   }
 
   .glitch{
+    margin-left: 0.3em;
     font-size: 4em;
     width: fit-content;
   }
 
   .title{
-    margin-left: 1em;
-    width: 100%;
+    margin-left: 0;
+    width: 80%;
   }
 
   .scrollDown{
