--- a/src/components/portfolio/portfolioLight.module.css
+++ b/src/components/portfolio/portfolioLight.module.css
@@ -261,12 +261,13 @@ color: rgba(19, 19, 19);
 
   .glitch{
     font-size: 3em;
-    margin-left: 0em;
+    margin-left: 0.3em;
     width: fit-content;
   }
 
   .title{
-    margin-left: 1em;
+    margin-left: 0;
+    width: 80%;
   }
 
   .canvas{
