--- a/src/components/skills/skillsDark.module.css
+++ b/src/components/skills/skillsDark.module.css
@@ -1,6 +1,7 @@
 .canvas{
   background-color: #000;
   height: 200%;
+  width: 100%;
 }
 
 .flexContainer{
@@ -237,7 +238,7 @@
 
 @media (max-width: 768px) {
   .canvas{
-    height:100%;
+    height:70em;
   }
   .flexContainer2{
     display: flex;
@@ -261,13 +262,13 @@
 
   .glitch{
     font-size: 4em;
-    width: fit-content;
-
+      width: fit-content;
+      margin-left: 0.3em;
   }
 
   .title{
-    margin-left: 1em;
-    width: 100%;
+    margin-left: 0;
+    width: 80%;
   }
 
   .scrollDown{
