--- a/src/components/navBar/navBarMobile.module.css
+++ b/src/components/navBar/navBarMobile.module.css
@@ -1,5 +1,7 @@
 
-
+.flexContainer{
+  display:none;
+  pointer-events: none;}
 @media (max-width: 768px) {
 .flexContainer{
     display: flex;
@@ -9,6 +11,7 @@
     justify-content: flex-end;
     margin-top: 2%;
     z-index: 1;
+    pointer-events: auto;
 }
 
 .icon svg{
