--- a/src/components/aboutMe/aboutMeDark.module.css
+++ b/src/components/aboutMe/aboutMeDark.module.css
@@ -182,7 +182,7 @@
 
 @media (max-width: 768px) {
   .canvas{
-    height:100%;
+    height:65em;
   }
   .flexContainer2{
     display: flex;
@@ -214,6 +214,7 @@
   }
 
   .scrollDown{
+    margin-top: 65em;
     margin-left: 50%;
   }
 
