--- a/src/components/skills/skillsLight.module.css
+++ b/src/components/skills/skillsLight.module.css
@@ -238,7 +238,7 @@
 
 @media (max-width: 768px) {
   .canvas{
-    height:100%;
+    height:65em;
   }
   .flexContainer2{
     display: flex;
@@ -262,8 +262,8 @@
 
   .glitch{
     font-size: 4em;
-    width: fit-content;
-    margin-left: 0.3em;
+      width: fit-content;
+      margin-left: 0.3em;
   }
 
   .title{
@@ -272,7 +272,7 @@
   }
 
   .scrollDown{
-    margin-top: 75em;
+    margin-top: 62em;
     margin-left: 50%;
   }
 
