--- a/src/components/navBar/navBarLight.module.css
+++ b/src/components/navBar/navBarLight.module.css
@@ -110,6 +110,12 @@ html {
 .player{
     margin-top: 3em;
 }
+@media (max-width: 1266px) {
+    .navBar{
+        width: 15%;
+    }
+
+}
 
 @media (max-width: 768px) {
     .flexContainer{
