--- a/src/components/navBar/navBarDark.module.css
+++ b/src/components/navBar/navBarDark.module.css
@@ -93,6 +93,7 @@ html {
        width: 2.5em;
    }
 .Links{
+    margin-top: 1.5em;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
