--- a/src/components/navBar/navBarLight.module.css
+++ b/src/components/navBar/navBarLight.module.css
@@ -96,6 +96,7 @@ html {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    margin-top: 1.5em;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
