--- a/src/components/portfolio/portfolioDark.module.css
+++ b/src/components/portfolio/portfolioDark.module.css
@@ -8,7 +8,7 @@
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 70em;
   overflow: hidden;
 }
 
@@ -72,141 +72,93 @@ width: 100%;
 }
 
 .description{
-display: -webkit-box;
-display: -ms-flexbox;
-display: flex;
-  width: 100vh;
-  margin-left: 21.5%;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.description p{
-  color: white;
-  font-size: 1.3em;
-}
-
-.description a{
-  text-decoration: none;
-  color: rgba(213, 0, 156, 0.693);
-}
-
-.description a:hover{
-  color: rgba(213, 0, 157, 0.992);
-}
-
-.description h1{
-  color: azure;
-  font-size: 1.4em;
-  margin-top: 1.5em;
-}
-
-.codeLearn{
-display: -webkit-box;
-display: -ms-flexbox;
-display: flex;
--webkit-box-orient: vertical;
--webkit-box-direction: normal;
-    -ms-flex-direction: column;
-        flex-direction: column;
-width: 25em;
-margin-top: 2em;
--webkit-box-align: center;
-    -ms-flex-align: center;
-        align-items: center;
-text-align: center;
-
-}
-
-.pokemon{
-display: -webkit-box;
-display: -ms-flexbox;
-display: flex;
--webkit-box-orient: vertical;
--webkit-box-direction: normal;
-    -ms-flex-direction: column;
-        flex-direction: column;
-width: 25em;
--webkit-box-align: center;
-    -ms-flex-align: center;
-        align-items: center;
-text-align: center;
-
-}
-
-.pokemon img{
-display: -webkit-box;
-display: -ms-flexbox;
-display: flex;
-width: 20em;
-height: 15em;
-}
-
-.codeLearn p, .pokemon p{
-line-height: 0em;
-font-size: 2em;
-font-weight: 300;
-}
-
-.codeLearn h1, .pokemon h1{
-font-weight: 200;
-color: rgb(201, 201, 201);
-}
-
-
-
-
-.progress{
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  color: #fff;
-  margin-top: 15em;
-  margin-left: 10em;
-  width: 40%;
+    width: 100%;
+    justify-content: center;
+            gap:5em;
+  }
+  
+  .description p{
+    color:rgba(19, 19, 19);
+    font-size: 1.3em;
+  }
+  
+  .description a{
+    text-decoration: none;
+    color: rgba(213, 0, 156, 0.693);
+  }
+  
+  .description a:hover{
+    color: rgba(213, 0, 157, 0.992);
+  }
+  
+  .description h1{
+    color: rgba(19, 19, 19);
+    font-size: 1.4em;
+    margin-top: 1.5em;
+  }
+  
+  
+  
+  .pokemon, .taller, .codeLearn{
+  display: -webkit-box;
+  display: -ms-flexbox;
+  position: relative;
+  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -ms-flex-line-pack: center;
-      align-content: center;
-}
-
-.progress p{
-  font-size: 1.4em;
-}
-
-.progressBar{
-  display: -webkit-box;
+  width: 25em;
+  min-height:30em  ;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  }
+  
+  
+  .image{
+    display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background-color: rgb(37, 37, 37);
-  border: 1px solid rgb(68, 68, 68);
-  border-radius: .5em;
-  width: 100%;
-  height: 1em;
-}
-
-.progressFront{
-  border-radius: .5em;
-  height: 100%;
-  background-color: rgb(156, 0, 99);
-  width: 85%;
-}
-.progressBack{
-  border-radius: .5em;
-  height: 100%;
-  background-color: rgb(156, 0, 99);
-  width: 65%;
-}
-
-.progressReact{
-  border-radius: .5em;
-  height: 100%;
-  background-color: rgb(156, 0, 99);
-  width: 80%;
-}
+  justify-content: center;
+  align-items: center;
+  width: 20em;
+  height: 15em;
+  }
+  
+  .taller img{
+    width: 12em;
+    height: 7em;
+    background-color: #f0d138;
+    border-radius: 1em;
+    }
+  
+  .codeLearn p, .pokemon p, .taller p{
+  line-height: 1em;
+  font-size: 2em;
+  font-weight: 300;
+  height: 2em;
+  position: relative;
+  color: rgb(236, 236, 236);
+  }
+  
+  
+  .codeLearn h1, .pokemon h1, .taller h1{
+  font-weight: 200;
+  color: rgb(236, 236, 236);
+  }
+  
+  .text{
+    display: flex;
+    position: relative;
+    justify-content: center;
+    height: 30%;
+    width: 100%;
+  }
 .scrollDown{
   position: absolute;
   width: 2em;
