--- a/src/components/portfolio/portfolioLight.module.css
+++ b/src/components/portfolio/portfolioLight.module.css
@@ -1,6 +1,6 @@
 .canvas{
   background-color: rgb(246, 246, 246);
-  height: 200%;
+  height: 100%;
 }
 
 .flexContainer{
@@ -8,7 +8,7 @@
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 70em;
   overflow: hidden;
 }
 
@@ -75,11 +75,9 @@ width: 100%;
 display: -webkit-box;
 display: -ms-flexbox;
 display: flex;
-  width: 100vh;
-  margin-left: 21.5%;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  width: 100%;
+  justify-content: center;
+          gap:5em;
 }
 
 .description p{
@@ -102,56 +100,65 @@ display: flex;
   margin-top: 1.5em;
 }
 
-.codeLearn{
+
+
+.pokemon, .taller, .codeLearn{
 display: -webkit-box;
 display: -ms-flexbox;
+position: relative;
 display: flex;
 -webkit-box-orient: vertical;
 -webkit-box-direction: normal;
     -ms-flex-direction: column;
         flex-direction: column;
 width: 25em;
-margin-top: 2em;
+min-height:30em  ;
 -webkit-box-align: center;
     -ms-flex-align: center;
         align-items: center;
 text-align: center;
-
 }
 
-.pokemon{
-display: -webkit-box;
+
+.image{
+  display: -webkit-box;
 display: -ms-flexbox;
 display: flex;
--webkit-box-orient: vertical;
--webkit-box-direction: normal;
-    -ms-flex-direction: column;
-        flex-direction: column;
-width: 25em;
--webkit-box-align: center;
-    -ms-flex-align: center;
-        align-items: center;
-text-align: center;
-
-}
-
-.pokemon img{
-display: -webkit-box;
-display: -ms-flexbox;
-display: flex;
+justify-content: center;
+align-items: center;
 width: 20em;
 height: 15em;
 }
 
-.codeLearn p, .pokemon p{
-line-height: 0em;
+
+
+.taller img{
+  width: 12em;
+  height: 7em;
+  background-color: #f0d138;
+  border-radius: 1em;
+  }
+
+.codeLearn p, .pokemon p, .taller p{
+line-height: 1em;
 font-size: 2em;
 font-weight: 300;
+height: 2em;
+position: relative;
 }
 
-.codeLearn h1, .pokemon h1{
+
+.codeLearn h1, .pokemon h1, .taller h1{
 font-weight: 200;
 color: rgba(19, 19, 19);
+}
+
+.text{
+  display: flex;
+  position: relative;
+  justify-content: center;
+  height: 30%;
+  width: 100%;
 }
 
 .scrollDown{
