--- a/src/components/home/complete.module.css
+++ b/src/components/home/complete.module.css
@@ -5,3 +5,17 @@
     width: 90%;
     gap: 0;
 }
+
+@media (max-width: 1266px) {
+    .Home{
+        width: 85%;
+        margin-left: 15%;
+    }
+  
+  }
+
+  @media (max-width: 768px) {
+    .Home{
+      width: 100%;
+      margin-left: 0%;
+    }}
