--- a/src/components/tiptap/styles.scss
+++ b/src/components/tiptap/styles.scss
@@ -50,7 +50,7 @@
   
     hr {
       border: none;
-      border-top: 2px solid rgba(#0D0D0D, 0.1);
+      border-top: 2px solid rgba(#efefef, 0.1);
       margin: 2rem 0;
     }
 
@@ -61,7 +61,7 @@
   .button{
     display: inline-flex;
     justify-content: center;
-    background-color: rgb(23, 23, 23);
+    background-color: rgb(239, 239, 239);
     height: 2em;
     width: 8.2em;
     align-items: center;
