--- a/src/components/portfolio/portfolioLight.module.css
+++ b/src/components/portfolio/portfolioLight.module.css
@@ -348,17 +348,23 @@ color: rgba(19, 19, 19);
   .flexContainer{
     justify-content: center;
     margin-left: 0em;
-    height: 160em;
+    position: relative;
   }
   .flexContainer2{
     margin-left: 0;
-    width: 100%;
+    width: 90%;
   }
   .description{
-    width: 90%;
     flex-direction: column;
     margin-left: 0;
-    
+
+  }
+  .category{
+    width: 100%;
+    align-self: center;
+  }
+  .grid{
+    width: 90%;
   }
 
   .description h3{
@@ -375,6 +381,7 @@ color: rgba(19, 19, 19);
   .title{
     margin-left: 0;
     width: 80%;
+    top: 0;
   }
 
   .canvas{
@@ -386,5 +393,20 @@ color: rgba(19, 19, 19);
   }
   .descriptionContainer{
     width: 100vw;
+  }
+
+  .grid{
+    display: flex;
+    width: 90%;
+    flex-direction: column;
+ justify-content: center;
+    gap: 3em;
+    margin-top: 57em;
+    align-self: center;
+    position: relative;
+  }
+  .category2{
+    position: relative;
+margin-top:50em;
   }
 }
