--- a/src/components/aboutMe/aboutMeDark.module.css
+++ b/src/components/aboutMe/aboutMeDark.module.css
@@ -69,11 +69,11 @@
 
 .description a{
   text-decoration: none;
-  color: rgba(213, 0, 156, 0.693);
+  color: rgb(207, 35, 255);
 }
 
 .description a:hover{
-  color: rgba(213, 0, 157, 0.992);
+  color: rgb(207, 35, 255);
 }
 
 .description h1{
