--- a/src/components/home/homeLight.module.css
+++ b/src/components/home/homeLight.module.css
@@ -11,7 +11,6 @@
   width: 100%;
   height: 100vh;
   overflow: hidden;
-  background-color: rgb(246, 246, 246);
 }
 .description{
   position: absolute;
@@ -35,7 +34,8 @@
 
 .glitch{
   position: relative;
-  color: rgb(37, 37, 37);
+  color: rgb(223, 223, 223);
+  z-index: 3;
   font-size: 6rem;
   font-weight: bold;
   text-shadow: 
@@ -51,6 +51,13 @@
 
 .glitch p{
   line-height: 6rem;
+}
+
+.first{
+  display: flex;
+  position: absolute;
+  left: 0;
+  z-index: 1;
 }
 
 .glitch span{
