--- a/src/components/navBar/navBarLight.module.css
+++ b/src/components/navBar/navBarLight.module.css
@@ -8,6 +8,7 @@
             flex-direction: column;
     width: 100%;
     height: 100vh;
+    z-index: 5;
 
 }
 
@@ -27,7 +28,7 @@
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    
+    z-index: 5;
 
 }
 .image{
