--- a/src/components/navBar/navBarMobile.module.css
+++ b/src/components/navBar/navBarMobile.module.css
@@ -1,7 +1,8 @@
 
 .flexContainer{
   display:none;
-  pointer-events: none;}
+  pointer-events: none;
+}
 @media (max-width: 768px) {
 .flexContainer{
     display: flex;
@@ -10,7 +11,7 @@
     position: fixed;
     justify-content: flex-end;
     margin-top: 2%;
-    z-index: 1;
+    z-index: 6;
     pointer-events: auto;
 }
 
