--- a/src/components/home/homeDark.module.css
+++ b/src/components/home/homeDark.module.css
@@ -384,6 +384,7 @@
           -ms-flex-pack: center;
               justify-content: center;
       overflow: hidden;
+      z-index: 3;
       
     }
   
