--- a/src/components/home/homeDark.module.css
+++ b/src/components/home/homeDark.module.css
@@ -383,6 +383,9 @@
           -ms-flex-pack: center;
               justify-content: center;
               background-attachment: none;
+              width: 100vw;
+              height: 100vh;
+              background-size: 100% 100%;
               background-image: url("../../../public/img/fondophone.png");
       overflow: hidden;
       z-index: 3;
